# ncn-template

./: .gitignore  Cargo.toml  Dockerfile  README.md  api-docs.md  code-review-guide.md  detailed-functions-expl.md  docker-compose.yaml  docker_logs.sh  docker_logs_metrics.sh  docker_logs_migrate.sh  docker_start.sh  docker_start_metrics.sh  docker_start_migrate.sh  docker_stop.sh  docker_stop_metrics.sh  docker_stop_migrate.sh  docs.md  format.sh  generate_client.sh  package.json  pipe_test_output.sh  program-flow-detailed.md  program-flow.md  simulation-test-detailed-guide.md
.cargo/: config.toml  programs.env
.github/workflows/: ci.yaml  jekyll-gh-pages.yaml
alert-templates/: has-voted.json
cli/: .env.example  Cargo.toml  Dockerfile  api-docs.md  getting_started.md
cli/src/: args.rs  getters.rs  handler.rs  instructions.rs  lib.rs
cli/src/keeper/: keeper_loop.rs  keeper_metrics.rs  keeper_state.rs
cli/src/ncn_keeper/: keeper_loop.rs
cli/src/operator/: mod.rs  operator_loop.rs  operator_metrics.rs  operator_state.rs
cli/src/operator_keeper/: keeper_loop.rs  keeper_metrics.rs
core/: Cargo.toml
core/src/: account_payer.rs  ballot_box.rs  config.rs  consensus_result.rs  constants.rs  discriminators.rs  epoch_marker.rs  epoch_snapshot.rs  epoch_state.rs  error.rs  fees.rs  instruction.rs  lib.rs  loaders.rs  ncn_reward_router.rs  operator_vault_reward_router.rs  stake_weight.rs  utils.rs  vault_operator_reward_router.rs  vault_registry.rs  weight_entry.rs  weight_table.rs
docs/: _config.yaml  index.md
docs/_about/: 00_terminology.md  01_high_level.md
docs/_cranker/: 00_about.md
docs/_onchain/: 00_pricing.md  01_snapshot.md  02_core_logic.md  03_reward_payment.md
docs/_operator/: 00_about.md
gcp_uploader/: Cargo.toml  monitor-merkle-uploads.service
gcp_uploader/src/: main.rs
idl/: jito_tip_router.json  ncn_program.json
integration_tests/: Cargo.toml
integration_tests/src/: main.rs
integration_tests/tests/: tests.rs
integration_tests/tests/fixtures/: mod.rs  ncn_program_client.rs  restaking_client.rs  stake_pool_client.rs  test_builder.rs  tip_distribution_client.rs  tip_router_client.rs  vault_client.rs
integration_tests/tests/helpers/: serialized_accounts.rs
integration_tests/tests/ncn_program/: admin_set_parameters.rs  admin_set_st_mint.rs  admin_update_weight_table.rs  cast_vote.rs  close_epoch_accounts.rs  epoch_state.rs  fuzz_simulation_tests.rs  initialize_ballot_box.rs  initialize_config.rs  initialize_epoch_snapshot.rs  initialize_operator_snapshot.rs  initialize_vault_registry.rs  initialize_weight_table.rs  meta_tests.rs  mod.rs  register_vault.rs  restaking_variations.rs  set_new_admin.rs  set_tie_breaker.rs  simulation_test.rs  simulation_tests.rs  snapshot_vault_operator_delegation.rs
integration_tests/tests/tip_router/: admin_set_st_mint.rs  admin_update_weight_table.rs  cast_vote.rs  close_epoch_accounts.rs  epoch_state.rs  initialize_config.rs  initialize_epoch_snapshot.rs  initialize_operator_snapshot.rs  meta_tests.rs  mod.rs  register_vault.rs  restaking_variations.rs  set_new_admin.rs  set_tie_breaker.rs  simulation_tests.rs
integration_tests/tests/tip_router/bpf/: set_merkle_root.rs
meta_merkle_tree/src/: generated_merkle_tree.rs  meta_merkle_tree.rs
ncn-program-operator-cli/: Cargo.toml
ncn-program-operator-cli/scripts/: setup-test-ledger.sh
ncn-program-operator-cli/src/: arg_matches.rs  cli.rs  ledger_utils.rs  lib.rs  load_and_process_ledger.rs  main.rs  ncn_program.rs  submit.rs  (+1 more)
operator-cli/: .env.example  Cargo.toml  api-docs.md  getting_started.md
operator_cli/: Cargo.toml  api-docs.md  getting_started.md
program/: Cargo.toml
scripts/: generate-clients.js  setup-test-ledger.sh
shank_cli/: Cargo.toml
telegraf/: telegraf.conf
tip-router-operator-cli/: Cargo.toml
(+153 files in other folders)
