[package]
name = "gcp_uploader"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A tool to continuously monitor and upload epoch-related files to Google Cloud Storage"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
cloud-storage = "0.11"
futures-util = "0.3.31"
hostname = "0.3"
regex = "1.10"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
